understory/static/css/understory.css
/* Move down content because we have a fixed navbar that is 3.5rem tall. Or sometimes we do. */
body {
  padding-top: 4.5rem; /* this was 3.1, or 3.5 */
  font-family: "garamond-premier-pro", "Cochin", "Baskerville", Palatino, "Times New Roman", serif;
  font-size: 100%;
  background: rgba(254, 254, 250, 1);
}

/* NAVBAR GENERALLY */
/* Make the navbar text black */
.navbar-nav li a {
    color: black;
    font-size: 125%;
}

/* navbar dropdown background color */
.navbar-collapse {
    background-color: rgba(254, 254, 250, .7);
}

.navbar .navbar-nav {
    display: inline-block;
    float: none;
    vertical-align: top;
}

.big-nav {
    margin-top: 5px;
    margin-bottom: 5px;
    font-size: 200%;
    font-family: 'Abril Fatface', cursive;
}

.navbar .navbar-collapse {
    text-align: left;
    line-height: 100%;
}

nav ul li:hover div { margin-left: 20px; }

/* Remove hamburger button border when not active/selected */
.navbar-toggler,
.navbar-toggler:active,
.navbar-toggler-icon:focus {
    outline: none;
    border: none;
    box-shadow: none;
    padding: 0; /* Fix alignment issues */
}

/* navbar icon color on all pages but jumbotron */
.fa-bars {
    color: white;
}
.fa-search {
    color: white;
}

a {
    color: #000;
}

i {
    color: #000;
}

p {
  font-family: "garamond-premier-pro", "Cochin", "Baskerville", Palatino, "Times New Roman", serif;
  font-size: 150%;
  line-height: 145%;
  color: #000;
}

/* Control fonts in the dropdown menu */
#navbarsExampleDefault {
    font-family: "garamond-premier-pro", "Cochin", "Baskerville", Palatino, "Times New Roman", serif;
    font-size: 150%;
    line-height: 100%;
    color: #000;
}

.hed {
    text-transform: uppercase;
    font-size: 1.5em;
    line-height: 1.15em;
    letter-spacing: 0.15em;
    margin: 0 0 10px 0;
}

.byline {
    font-size: 1em;
    line-height: 1.4em;
    text-transform: uppercase;
    letter-spacing: 0.075em;
}

h1,
h2,
h3,
h4,
h5,
h6,
h7 {
    font-weight: normal;
    margin: 0;
    padding: 0;
    text-transform: uppercase;
    text-align: center;
}
h1 {
    line-height: 1.25em;
    letter-spacing: 0.125em;
    font-family: "garamond-premier-pro", "Cochin", "Baskerville", Palatino, "Times New Roman", serif;
}
h2 {
    line-height: 1.5em;
    letter-spacing: 0.15em;
    font-family: "garamond-premier-pro", "Cochin", "Baskerville", Palatino, "Times New Roman", serif;
    /* This may have been the font Ammel liked: font-family: "kepler-std-semicondensed-dis", "Avenir Next Condensed", Impact, serif; */
}
h3 {
    font-family: "garamond-premier-pro", "Cochin", "Baskerville", Palatino, "Times New Roman", serif;
    line-height: 1em;
    text-transform: uppercase;
    letter-spacing: 0em;
    font-weight: 600;
}
h4 {
    font-family: "garamond-premier-pro", "Cochin", "Baskerville", Palatino, "Times New Roman", serif;
    line-height: 1.4em;
    font-weight: 600;
    text-transform: none;
}
h5 {
    line-height: 1.4em;
    letter-spacing: 0.2em;
}
h6 {
    font-family: "Avenir Next", "Avenir", "Helvetica Neue", Helvetica, Arial, sans-serif;
    line-height: 1.4em;
    letter-spacing: 0.15em;
    color: #9e9e9e;
    font-weight: 500;
}
.smallcaps {
    font-variant: small-caps;
    text-transform: none;
}

/*
h1 {
  font-family: 'Playfair Display', serif;
    color: #000;
}

h2 {
    font-family: 'Playfair Display', serif;
    color: #000;
}

h3 {
    font-family: 'Playfair Display', serif;
    color: #000;
}

h4 {
  font-family: 'Lato', sans-serif;
    color: #000;
}

h5 {
  font-family: 'Lato', sans-serif;
    color: #000;
}
*/

/* Issue images */
.featured-issues h4 {
  text-align: center;
  margin: 20px;
}

.featured-issues figure {
  background-color: #eb7400;
  margin: 0;
  overflow: hidden;
}

.featured-issues li {
  list-style: none;
}

.featured-issues li:hover img {
  opacity: 0.3;
}

/* Background images */
.jumbotron {
 background: url("../img/understory-bg-blank.jpg") fixed center no-repeat;
 background-size: 100% 100%;
 border-radius: 0 !important;
}

/* Nav background */
#main-nav {

    background: url("../img/understory-bg-blank.jpg") fixed center no-repeat;
    background-size: 100% 100%;
    border-radius: 0 !important;
}

/* social media icons */
.fa-facebook-square {
    color: black;
}
.fa-twitter-square {
    color: black;
}
.fa-envelope-square {
    color: black;
}
.fa-telegram {
    color: black;
}
.fa-whatsapp {
    color: black;
}

/* set a max-width for horizontal fluid layout and make it centered */
.container-fluid {
  margin-right: auto;
  margin-left: auto;
  max-width: 700px; /* articles_page.html uses a fluid container + this to limit the viewport to 700px */
}

.img-fluid {
    max-width: 100%;
    height: auto;
}

/* css for the StreamField blocks */

/* css for quotations */
blockquote {
  margin: 1.0em;
  padding: 0.5em;
  color: #000;
  font-size: 145%;
}

blockquote:before {
  color: #000;
  font-size: 4em;
  line-height: 0.1em;
  margin-right: 0.25em;
}
blockquote p {
  display: inline;
  color: #000;
}

.quote {
  -webkit-transition: all 900ms cubic-bezier(0.165, 0.84, 0.44, 1);
  -moz-transition: all 900ms cubic-bezier(0.165, 0.84, 0.44, 1);
  transition: all 900ms cubic-bezier(0.165, 0.84, 0.44, 1);
  opacity: 0;
}

.line {
  -webkit-transition: width 900ms cubic-bezier(0.165, 0.84, 0.44, 1);
  -moz-transition: width 900ms cubic-bezier(0.165, 0.84, 0.44, 1);
  transition: width 900ms cubic-bezier(0.165, 0.84, 0.44, 1);
  width: 0px;
  height: 1px;
  background: #000;
  margin: auto;
}

.quote.active {
  opacity: 1;
}

.quote.active .line {
  width: 100px;
}

@-webkit-keyframes adjustHue {
  50% {
    -webkit-filter: saturate(150%) hue-rotate(-35deg);
  }
}

@-moz-keyframes adjustHue {
  50% {
    -moz-filter: saturate(150%) hue-rotate(-35deg);
  }
}

@keyframes adjustHue {
  50% {
    filter: saturate(150%) hue-rotate(-35deg);
  }
}

